[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "[ROBOT] bump version to {new_version} [ci skip]"
tag_message = "[ROBOT] {new_version} [ci skip]"
commit = true
tag = true
push = true

[bumpver.file_patterns]
"src/injectx/__init__.py" = [
    '^__version__ = "{version}"$',
]
"pyproject.toml" = [
    '^version = "{version}"$',
    '^current_version = "{version}"$',
]

[project]
name = "inject-x"
dynamic = ["dependencies"]
authors = [
  { name="Colageo Mirko", email="mirko.colageo@gmail.com" },
]
description = "Natural language request to json converter library"
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.dynamic]
version = {attr = "injectx.__version__"}  # Dynamically fetch version
dependencies = {file = ["requirements.txt"]}
[project.urls]
Homepage = "TODO"